# KasperskyCyberimmunityHack2023

./: .gitignore  README.md  docker-compose-kafka.yml  kafka_messages.json  report.md  tests_algorithm.md
docs/uml/functional/: app_get_sensors_a.puml  get_sensors_b.puml  get_sensors_simple_a.puml  send_command.puml  sequence.puml  update_app.puml  update_settings.puml
docs/uml/negative/: orchestrator.puml  send_command.puml  sensors_if_simple.puml  tripple_voting_data.puml  validator.puml
monitor/: .env.example  Dockerfile  README.md  app.py  config.py  docker-compose.yml  logging_utils.py  pyproject.toml  tasks.py  utils.py
monitor/entities/: __init__.py  abstract_body.py  action_result.py  base_info.py  control.py  data_container.py  protection.py  sensor.py  sensor_request.py  stop.py
monitor/monitor/: __init__.py  exceptions.py  monitor.py  utils.py
plc/: PP1.py  PP2.py  PP3.py  check_process_integrity.py  component_maj_logic.py  component_orchestrator.py  component_sensor_interface.py  persistent_integrity_checker.py  plc.py  private.pem  public.pem  test.http  test.py  test2.py  test_kafka_sync_request.py
sample_processes/: .dockerignore  .env.example  Dockerfile  cofnig.py  decorator.py  docker-compose.yml  message_helpers.py  pyproject.toml  sample_process.py
sensors/: sensors.py
storage/: PP2.py
